<resources>
    <string name="app_name">NotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">Do you want to delete the note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pick_date">Pick Date</string>
    <string name="add">Add</string>
    <string name="add_to_do">Add To Do</string>
</resources>